<resources>
    <string name="app_name">UI-Demo</string>

    <string name="main_title">HSLU - Mobile Programming</string>
    <string name="main_welcomeText">Willkommen zum zweiten Kursblock!</string>

    <string name="title_activity_layout_demo">LayoutDemoActivity</string>

    // Section 1 Strings
    <string name="main_section1">1. Layouts</string>
    <string name="main_section1_text">Wähle eines der folgenden Layouts für die Demo:</string>
    <string name="main_radio_linearText">Linear Layout</string>
    <string name="main_radio_relativeText">Relative Layout</string>

    <string name="main_linearlayout_vertical">Ich bin ein vertikales LinearLayout</string>
    <string name="main_linearlayout_horizontal">Ich bin ein horizontales LinearLayout</string>

    <string name="main_const_title">Bestellung</string>
    <string name="main_const_input1">Produkt-ID</string>
    <string name="main_const_input2">Menge</string>
    <string name="main_const_checkbox">Sondertarif</string>
    <string name="main_const_button">Preis berechnen</string>
    <string name="main_const_footer">Preisangabe ohne Gewähr</string>

    // Section 2 Strings
    <string name="main_section2">2. Screen-Orientation und Übersetzung</string>
    <string name="main_configDemoText">Diese Seite hat ein angepasstes Layout für Landscape Mode. Probier es aus! Aussserdem kann sie auch Schweizerdeutsch: Stelle die Sprache im Emulator auf Deutsch (Schweiz) um und starte die App erneut.</string>

    //Section 3 Strings
    <string name="main_section3">3. Views und Events</string>
    <string name="main_section3_button">Seite mit Views-Demos anzeigen</string>

    <string name="viewdemo_logLabel">Neue Bewertung: ausstehend</string>
    <string name="viewdemo_logLabel_dyn">Neue Bewertung:&#160;</string>
    <string name="viewdemo_ratinglabel">Hier kannst du wirklich eine Bewertung abgeben:</string>
    <string name="viewdemo_radio1">wahrhaftig</string>
    <string name="viewdemo_radio2">pressant</string>
    <string name="viewdemo_radio3">immer</string>
    <string name="viewdemo_radio4">ziemlich</string>
    <string name="viewdemo_toggle01_on">Man sieht mich</string>
    <string name="viewdemo_toggle01_off">Man sieht mich nicht</string>

</resources>
